--- a/AreaPubblica/Views/Shared/_Layout.cshtml
+++ b/AreaPubblica/Views/Shared/_Layout.cshtml
@@ -132,7 +132,7 @@
 									<input type="password" class="form-control" name="PWD" asp-for="PWD" required>
 								</div>
 
-								<button type="submit" class="btn btn-primary w-100"> Login</button>
+								<button formtarget="_blank" type="submit" class="btn btn-primary w-100"> Login</button>
 
 							</form>
 
