--- a/AreaLavoroStudente/MasterPage.master
+++ b/AreaLavoroStudente/MasterPage.master
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <title></title>
+    <title>UniGen - Area Lavoro Studente</title>
 
     <style>
         html, body {
@@ -130,9 +130,9 @@
                                     <asp:Label ID="lblStudente" runat="server"></asp:Label>
                                 </a>
                             </li>
-                            <li class="nav-item">
+                          <%--  <li class="nav-item">
                                 <asp:Button ID="Button1" runat="server" Text="Area Studente" CssClass="btn btn-light btn-sm" OnClick="btnLogout_Click" />
-                            </li>
+                            </li>--%>
                         </ul>
                     </div>
                 </div>
