--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -14,33 +14,34 @@
 
     <style>
         .navbar-custom {
-        background-color: #12304F;
+            background-color: #12304F;
         }
 
-        .navbar-custom .nav-link,
-        .navbar-custom .navbar-brand {
-        color: white !important;
-        }
+            .navbar-custom .nav-link,
+            .navbar-custom .navbar-brand {
+                color: white !important;
+            }
 
         .dropdown-menu > li:hover > .dropdown-submenu {
-        display: block;
+            display: block;
         }
 
 
         .sticky-top {
-        z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
+            z-index: 1030 !important; /* Bootstrap usa 1000 per i dropdown, 1050+ per i modal. 1030 è un valore comune per le navbar fixed/sticky */
         }
 
 
 
         .navbar-nav .nav-item.logout {
-        position: absolute;
-        right: 0; /* Posiziona il link a destra */
+            position: absolute;
+            right: 0; /* Posiziona il link a destra */
         }
 
         body {
             background-color: #f8f9fe;
-        }  
+        }
+
         footer {
             position: absolute;
             bottom: 0;
@@ -66,11 +67,11 @@
                         @if (@ViewData["matricola"] != null)
                         {
 
-                            <a class="btn btn-sm text-white" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}&r={ViewData["ruolo"]}")">Area Lavoro</a>
-
-                        } else
+                            <a target="_blank" class="btn btn-sm text-white" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}&r={ViewData["ruolo"]}")">Area Lavoro</a>
+                        }
+                        else
                         {
-                            <a class="btn btn-sm text-white disabled" tabindex="-1" aria-disabled="true" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}")">Area Lavoro</a>
+                            <a target="_blank" class="btn btn-sm text-white disabled" tabindex="-1" aria-disabled="true" style="background-color: #12304F;" href="@($"http://localhost:54399/Homepage.aspx?cod={ViewData["studente_id"]}&usr={ViewData["email"]}&mat={ViewData["matricola"]}&a={ViewData["abilitato"]}")">Area Lavoro</a>
                         }
                     </div>
                     <div class="d-flex gap-2 me-3">
@@ -82,7 +83,7 @@
             </div>
         </div>
     </div>
-    
+
     <header>
         <div class="sticky-top">
             <nav class="navbar navbar-expand-lg navbar-custom">
@@ -101,7 +102,7 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown">
-                                        <a class="dropdown-item" style="color:inherit"; href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
+                                        <a class="dropdown-item" style="color:inherit" ; href="/Studenti/ModificaProfilo?cod=@ViewData["studente_id"]">
                                             Modifica Dati
                                         </a>
                                     </li>
@@ -119,13 +120,13 @@
                                 </ul>
                             </li>
 
-                    @*         <li class="nav-item">
+                            @*         <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/Comunicazioni/Add">Nuova Comunicazione</a>
 
                             </li> *@
 
                             <li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="/Faq/Faq">FAQ</a>
+                                <a class="nav-link active" aria-current="page" href="/Faq/Faq">FAQ</a>
                             </li>
                         </ul>
                     </div>
@@ -141,37 +142,37 @@
     @* </div> *@
     <div class="mt-3 mb-3" style="height: 15vh;"></div>
 
-        <footer class="bg-dark text-white mt-auto">
-            <div class="bg-dark text-white mt-auto">
-                <div class="container d-flex justify-content-between align-items-end flex-wrap">
-                    <div>
-                        <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
-                        <p class="fs-4">Università UNIGen</p>
-                        <p class="fs-6">Milano, MI 20100, IT</p>
-                    </div>
-                    <div>
-                        <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
-                    </div>
-                    <div>
-                        <p class="fs-5 mb-1">Chi Siamo</p>
-                        <ul class="list-unstyled ms-3">
-                            <li>
-                                <a class="text-white" asp-area="" asp-controller="Contatti" asp-action="Index">Contatti</a>
-                            </li>
-                            <li>
-                                <a class="text-white" asp-area="" asp-controller="ComeFunziona" asp-action="Index">Come Funziona</a>
-                            </li>
-                            <li>
-                                <a class="text-white" asp-area="" asp-controller="FAQ" asp-action="Index">FAQ</a>
-                            </li>
-                            <li>
-                                <a class="text-white" asp-area="" asp-controller="Privacy" asp-action="Index">Privacy</a>
-                            </li>
-                        </ul>
-                    </div>
+    <footer class="bg-dark text-white mt-auto">
+        <div class="bg-dark text-white mt-auto">
+            <div class="container d-flex justify-content-between align-items-end flex-wrap">
+                <div>
+                    <img src="https://italy.generation.org/wp-content/uploads/2019/05/Generation_Italy_logo_WHITE.svg" alt="Logo UNIGen" class="img-fluid my-3" width="150px">
+                    <p class="fs-4">Università UNIGen</p>
+                    <p class="fs-6">Milano, MI 20100, IT</p>
+                </div>
+                <div>
+                    <p class="fs-6">© 2024 Generation: You Employed, Inc.</p>
+                </div>
+                <div>
+                    <p class="fs-5 mb-1">Chi Siamo</p>
+                    <ul class="list-unstyled ms-3">
+                        <li>
+                            <a class="text-white" asp-area="" asp-controller="Contatti" asp-action="Index">Contatti</a>
+                        </li>
+                        <li>
+                            <a class="text-white" asp-area="" asp-controller="ComeFunziona" asp-action="Index">Come Funziona</a>
+                        </li>
+                        <li>
+                            <a class="text-white" asp-area="" asp-controller="FAQ" asp-action="Index">FAQ</a>
+                        </li>
+                        <li>
+                            <a class="text-white" asp-area="" asp-controller="Privacy" asp-action="Index">Privacy</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
