--- a/AreaStudente/Views/Shared/_Layout.cshtml
+++ b/AreaStudente/Views/Shared/_Layout.cshtml
@@ -156,16 +156,16 @@
                         <p class="fs-5 mb-1">Chi Siamo</p>
                         <ul class="list-unstyled ms-3">
                             <li>
-                                <a class="text-white" asp-area="" asp-controller="Contatti" asp-action="Index">Contatti</a>
+                                <a class="text-white" asp-area="" asp-controller="Home" asp-action="Contatti">Contatti</a>
                             </li>
                             <li>
-                                <a class="text-white" asp-area="" asp-controller="ComeFunziona" asp-action="Index">Come Funziona</a>
+                            <a class="text-white" asp-area="" asp-controller="Home" asp-action="Come_Funziona">Come Funziona</a>
                             </li>
                             <li>
-                                <a class="text-white" asp-area="" asp-controller="FAQ" asp-action="Index">FAQ</a>
+                                <a class="text-white" asp-area="" asp-controller="FAQ" asp-action="Faq">FAQ</a>
                             </li>
                             <li>
-                                <a class="text-white" asp-area="" asp-controller="Privacy" asp-action="Index">Privacy</a>
+                                <a class="text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
                         </ul>
                     </div>
