--- a/AreaPubblica/Views/Didattica/Seduta.cshtml
+++ b/AreaPubblica/Views/Didattica/Seduta.cshtml
@@ -1,101 +1,87 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<div style="padding-top: 120px;"></div>
+﻿@* View Sedute di Laurea *@
 
-<div class="row">
-	<div class="col-2"></div>
-	<!-- TITOLO FUORI DALLA GRIGLIA -->
-	<div class="col-10">
+<div class="container mb-5" style="padding-top: 120px;">
+	<h1 class="mb-4">Sedute di Laurea</h1>
 
-		<h1>Sedute di Laurea</h1>
+	<div class="row">
+		<!-- Colonna principale -->
+		<div class="col-md-8">
+			<h2 class="mt-4">Cerimonia di laurea triennale</h2>
+			<p class="mt-3">
+				La consegna dei diplomi di laurea triennale della sessione straordinaria 2023/24 si svolgerà venerdì 9 maggio 2025 in due cerimonie: la prima alle ore 10:00, la seconda alle ore 13:30.<br />
+				Le laureate e i laureati potranno scegliere indistintamente e fino ad esaurimento dei posti disponibili, la cerimonia di preferenza. In ogni caso saranno garantiti i posti per tutte/i.<br />
+				La procedura di prenotazione sarà attiva a partire dalle ore 10:00 di domenica 20 aprile e fino alle ore 12:00 di mercoledì 30 aprile 2025.<br />
+				Tutte le informazioni di dettaglio saranno disponibili nella pagina del programma.<br />
+				La cerimonia di laurea per i laureati e le laureate triennali della sessione estiva e autunnale 2024/25 si terranno rispettivamente nei giorni 11 e 12 novembre 2025.<br />
+			</p>
 
-
-		<!-- GRIGLIA CONTENUTI + IMMAGINE -->
-		<div class="mt-4">
-			<!-- CONTENUTO PRINCIPALE -->
-			<div class="col-md-8">
-				<h2 class="mt-4">Cerimonia di laurea triennale</h2>
-				<p class="mt-3">
-					La consegna dei diplomi di laurea triennale della sessione straordinaria 2023/24 si svolgerà venerdì 9 maggio 2025 in due cerimonie: la prima alle ore 10:00, la seconda alle ore 13:30.<br />
-					Le laureate e i laureati potranno scegliere indistintamente e fino ad esaurimento dei posti disponibili, la cerimonia di preferenza. In ogni caso saranno garantiti i posti per tutte/i.<br />
-					La procedura di prenotazione sarà attiva a partire dalle ore 10:00 di domenica 20 aprile e fino alle ore 12:00 di mercoledì 30 aprile 2025.<br />
-					Tutte le informazioni di dettaglio saranno disponibili nella pagina del programma.<br />
-					La cerimonia di laurea per i laureati e le laureate triennali della sessione estiva e autunnale 2024/25 si terranno rispettivamente nei giorni 11 e 12 novembre 2025.<br />
-				</p>
-
-				<!-- ACCORDION -->
-				<div class="accordion shadow-sm rounded mt-4" id="faqAccordion">
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="heading1">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"
-									aria-expanded="false" aria-controls="collapse1">
-								Venerdì 9 maggio 2025, ore 10:00
-							</button>
-						</h2>
-						<div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1">
-							<div class="accordion-body">
-								<ul>
-									<li>10:00 Saluto della Rettrice Andrea Tiziani, saluto delle autorità</li>
-									<li>10:20 Discorso miglior studente/studentessa della sessione</li>
-									<li>10:30 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate</li>
-									<li>11:30 Orario indicativo termine cerimonia</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-					<div class="accordion-item">
-						<h2 class="accordion-header" id="heading2">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-									data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-								Venerdì 9 maggio 2025, ore 13:30
-							</button>
-						</h2>
-						<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2">
-							<div class="accordion-body">
-								<ul>
-									<li>13:30 Saluto della Rettrice Andrea Tiziani, saluto delle autorità</li>
-									<li>13:50 Discorso miglior studente/studentessa della sessione</li>
-									<li>14:00 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate</li>
-									<li>15:00 Orario indicativo termine cerimonia</li>
-								</ul>
-							</div>
+			<!-- Accordion -->
+			<div class="accordion shadow-sm rounded mt-4" id="faqAccordion">
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="heading1">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+								data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+							Venerdì 9 maggio 2025, ore 10:00
+						</button>
+					</h2>
+					<div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1">
+						<div class="accordion-body">
+							<ul>
+								<li>10:00 Saluto della Rettrice Andrea Tiziani, saluto delle autorità</li>
+								<li>10:20 Discorso miglior studente/studentessa della sessione</li>
+								<li>10:30 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate</li>
+								<li>11:30 Orario indicativo termine cerimonia</li>
+							</ul>
 						</div>
 					</div>
 				</div>
 
-				<!-- SECONDA SEZIONE -->
-				<h2 class="mt-5">Disposizioni per l'accesso</h2>
-				<p class="mt-3">
-					Laureati e laureate si dovranno presentare in Piazza, accompagnati al massimo da due persone, alle quale verrà assegnato un posto a sedere nell'area dedicata agli ospiti.<br />
-					Gli ingressi saranno aperti 45 minuti prima dell'orario di inizio. L'accesso all'area riservata sarà consentito fino a 15 minuti prima dell'inizio della cerimonia.<br />
-					Al fine di evitare assembramenti, gli ingressi e le uscite saranno scaglionati nel tempo e verranno predisposte apposite corsie per l’accesso e il deflusso, debitamente segnalate.<br />
-					L'accesso sarà consentito solo a chi sarà in possesso del biglietto elettronico e di un documento d'identità. Tali documenti dovranno essere esibiti all'ingresso.<br /><br />
-					Lo staff, all'interno e all'esterno dell'area riservata, garantirà il rispetto della normativa vigente e del protocollo adottato per l'evento.<br />
-					Si ricorda che la permanenza in piazza, considerata la durata della cerimonia e le procedure per l’accesso e uscita dall'area, sarà di circa tre ore.<br />
-					Si evidenzia inoltre che la cerimonia si svolgerà all'aperto e pertanto sarà soggetta agli eventi atmosferici: vi invitiamo quindi a prendere le necessarie precauzioni.<br />
-				</p>
+				<div class="accordion-item">
+					<h2 class="accordion-header" id="heading2">
+						<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+								data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+							Venerdì 9 maggio 2025, ore 13:30
+						</button>
+					</h2>
+					<div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2">
+						<div class="accordion-body">
+							<ul>
+								<li>13:30 Saluto della Rettrice Andrea Tiziani, saluto delle autorità</li>
+								<li>13:50 Discorso miglior studente/studentessa della sessione</li>
+								<li>14:00 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate</li>
+								<li>15:00 Orario indicativo termine cerimonia</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 
-			<!-- IMMAGINE STICKY -->
-			<div class="col-md-4">
-				<div style="position: sticky; top: 80px;">
-					<img src="~/sources/sedut.jpg" class="img-fluid rounded shadow" alt="Cerimonia di laurea" />
-				</div>
+			<!-- Seconda sezione -->
+			<h2 class="mt-5">Disposizioni per l'accesso</h2>
+			<p class="mt-3">
+				Laureati e laureate si dovranno presentare in Piazza, accompagnati al massimo da due persone, alle quale verrà assegnato un posto a sedere nell'area dedicata agli ospiti.<br />
+				Gli ingressi saranno aperti 45 minuti prima dell'orario di inizio. L'accesso all'area riservata sarà consentito fino a 15 minuti prima dell'inizio della cerimonia.<br />
+				Al fine di evitare assembramenti, gli ingressi e le uscite saranno scaglionati nel tempo e verranno predisposte apposite corsie per l’accesso e il deflusso, debitamente segnalate.<br />
+				L'accesso sarà consentito solo a chi sarà in possesso del biglietto elettronico e di un documento d'identità. Tali documenti dovranno essere esibiti all'ingresso.<br /><br />
+				Lo staff, all'interno e all'esterno dell'area riservata, garantirà il rispetto della normativa vigente e del protocollo adottato per l'evento.<br />
+				Si ricorda che la permanenza in piazza, considerata la durata della cerimonia e le procedure per l’accesso e uscita dall'area, sarà di circa tre ore.<br />
+				Si evidenzia inoltre che la cerimonia si svolgerà all'aperto e pertanto sarà soggetta agli eventi atmosferici: vi invitiamo quindi a prendere le necessarie precauzioni.<br />
+			</p>
+		</div>
+
+		<!-- Colonna immagine -->
+		<div class="col-md-4 d-flex align-items-start">
+			<div style="top: 80px;">
+				<img src="~/sources/sedut.jpg" class="img-fluid rounded shadow" alt="Cerimonia di laurea" />
 			</div>
 		</div>
 	</div>
-
 </div>
-	<div style="height:50vh;"></div>
 
-	<style>
-		.accordion-button:not(.collapsed) {
-			background-color: #f8f9fa !important;
-			color: #212529 !important;
-			box-shadow: none !important;
-		}
-	</style>
+<style>
+	.accordion-button:not(.collapsed) {
+		background-color: #f8f9fa !important;
+		color: #212529 !important;
+		box-shadow: none !important;
+	}
+</style>
