--- a/AreaDocente/Views/Materiali/List.cshtml
+++ b/AreaDocente/Views/Materiali/List.cshtml
@@ -182,6 +182,19 @@
     </div>
 
     @section Scripts {
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <script>
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Errore',
+                    text: '@TempData["ErrorMessage"]'
+                });
+            </script>
+        }
+
         <script>
             function openEditModal(kMateriale, titolo, kEsame) {
                 try {
