collegamento comunicazioni amministrazione funzionante

--- a/Comunicazioni/Views/Shared/_Layout.cshtml
+++ b/Comunicazioni/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
 							}
 							else if (ruolo != null && ruolo == "a")
 							{
-								
+								<a class="nav-link" href="http://localhost:54411/Home.aspx?cod=@(Context.Session.GetString("cod"))&r=@(Context.Session.GetString("r"))&usr=@(Context.Session.GetString("usr"))">Torna all'Area amministrativa</a>
 							}
 						</ul>
 					</div>
