corrections on views home controller

--- a/AreaStudente/Views/Home/Come_Funziona.cshtml
+++ b/AreaStudente/Views/Home/Come_Funziona.cshtml
@@ -3,7 +3,7 @@
 	@* <div class="col-2"></div> *@
 	<div class=" main-content">
 		<div class="container-fluid">
-		<h1 style="font-size:60px;"> Come Funziona?</h1>
+		<h1>Come Funziona?</h1>
 
 		<p>
 			Studiare con la nostra università online è semplice e flessibile. <br>
