--- a/AreaStudente/Views/Home/Privacy.cshtml
+++ b/AreaStudente/Views/Home/Privacy.cshtml
@@ -6,7 +6,7 @@
 
 <div class="main-content">
     <div class="container-fluid">
-        <h1 style="font-size:60px;"> Informativa sulla Privacy</h1>
+        <h1> Informativa sulla Privacy</h1>
 
 
 
@@ -16,7 +16,7 @@
 
         <p>
             <strong>1. Titolare del Trattamento</strong><br>
-            Il titolare del trattamento dei dati è [Nome Azienda], con sede legale in [Indirizzo], contattabile all’indirizzo email: info@unigen.it.
+            Il titolare del trattamento dei dati è Unigen S.r.l., con sede legale in Via G. di Vittorio 2, 40057 Cadriano di Granarolo (BO), contattabile all’indirizzo email: info@unigen.it.
         </p>
 
         <p>
@@ -51,7 +51,7 @@
 
         <p>
             <strong>6. Cookie</strong><br>
-            Il sito utilizza cookie tecnici e, previo consenso, di profilazione. Per maggiori informazioni, consulta la [Cookie Policy].
+            Il sito utilizza cookie tecnici e, previo consenso, di profilazione. Per maggiori informazioni, consulta la Cookie Policy.
         </p>
        <div style="height:5vh;">
            &nbsp;
