--- a/AreaPubblica/Views/FAQ/Index.cshtml
+++ b/AreaPubblica/Views/FAQ/Index.cshtml
@@ -12,9 +12,9 @@
             </h2>
             <div id="collapse1" class="accordion-collapse collapse " aria-labelledby="heading1">
                 <div class="accordion-body">
-                    <strong>Registrandosi</strong> sul portale dell’università, compilando la domanda online e allegando i <strong>documenti
-                        richiesti
-                    </strong>.
+                    <strong>Registrandosi sul portale dell’università, compilando la domanda online e allegando i documenti
+                            richiesti.</strong>
+                    
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@
             </h2>
             <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2">
                 <div class="accordion-body">
-                    Serve un <strong>diploma di scuola superiore</strong>. Alcuni corsi richiedono test di ingresso.
+                    <strong>Serve un diploma di scuola superiore. Alcuni corsi richiedono test di ingresso.</strong>
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
             </h2>
             <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3">
                 <div class="accordion-body">
-                    <strong>Sì</strong>, per corsi a numero programmato o con prove di valutazione.
+                    <strong>Sì, per corsi a numero programmato o con prove di valutazione.</strong>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
             </h2>
             <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4">
                 <div class="accordion-body">
-                    Le tasse variano in base all’<strong>ISEE</strong> e al <strong>corso</strong>. Esistono esoneri e borse di studio.
+                    <strong>Le tasse variano in base all’ISEE e al corso. Esistono esoneri e borse di studio.</strong>
                 </div>
             </div>
         </div>
@@ -70,7 +70,7 @@
             </h2>
             <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5">
                 <div class="accordion-body">
-                    <strong>Sì</strong>, sia per merito che per <strong>reddito</strong>, offerte da enti regionali o <strong>dall’ateneo</strong>.
+                    <strong>Sì, sia per merito che per reddito, offerte da enti regionali o dall’ateneo.</strong>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
             </h2>
             <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6">
                 <div class="accordion-body">
-                    <strong>Sì</strong>, grazie a programmi come <strong>Erasmus+</strong> e accordi internazionali dell’università.
+                    <strong>Si, grazie a programmi come Erasmus+ e accordi internazionali dell’università.</strong>
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@
             </h2>
             <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7">
                 <div class="accordion-body">
-                    <Strong>Videolezioni online</Strong>, <Strong>laboratori </Strong>e <strong>attività </strong>pratiche secondo il piano del corso.
+                    <Strong>Videolezioni online, laboratori e attività pratiche secondo il piano del corso.</strong>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
             </h2>
             <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8">
                 <div class="accordion-body">
-                    Possono essere <strong>orali</strong>, <strong>scritti </strong>o <strong>pratici</strong>, secondo il tipo di insegnamento.
+                    <strong>Possono essere orali, scritti o pratici, secondo il tipo di insegnamento.</strong>
                 </div>
             </div>
         </div>
@@ -126,7 +126,7 @@
             </h2>
             <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9">
                 <div class="accordion-body">
-                    Certo! Molti studenti fanno lavori <strong>part-time</strong>o <strong>tirocini</strong> compatibili con lo studio.
+                    <strong>Certo! Molti studenti fanno lavori part-time o tirocini compatibili con lo studio.</strong>
                 </div>
             </div>
         </div>
@@ -140,7 +140,7 @@
             </h2>
             <div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10">
                 <div class="accordion-body">
-                    Continui a studiare come <strong>"fuori corso"</strong>, sostenendo gli esami <strong>normalmente</strong>.
+                    <strong>Continui a studiare come "fuori corso", sostenendo gli esami normalmente</strong>.
                 </div>
             </div>
 
