--- a/AreaPubblica/Views/Privacy/Index.cshtml
+++ b/AreaPubblica/Views/Privacy/Index.cshtml
@@ -16,7 +16,7 @@
 
 			<div class="mb-4">
 				<strong>1. Titolare del Trattamento</strong><br>
-				Il titolare del trattamento dei dati è UniGeneration, con sede legale in [Indirizzo], contattabile all’indirizzo email: [email@email.it].
+				Il titolare del trattamento dei dati è UniGeneration, con sede legale in Milano, MI 20100, IT, contattabile all’indirizzo email: centralino@unigen.it .
 			</div>
 
 			<div class="mb-4">
@@ -75,7 +75,7 @@
 
 				<p class="mb-2">
 					<b>Cookie di terze parti</b>
-					Alcuni cookie potrebbero essere installati da servizi di terze parti (ad es. social media, servizi di analisi o pubblicità) integrati nel nostro sito. L’uso di questi cookie è soggetto alle politiche delle terze parti stesse.
+					Alcuni cookie potrebbero essere installati da servizi di terze parti (ad es. social media, servizi di analisi o pubblicità) integrati nel nostro sito. L’uso di questi cookie è soggetto alle politiche delle terze parti stesse. <br />
 				</p>
 
 				<p>
@@ -89,12 +89,13 @@
 					<li>Google Ads</li>
 				</ul>
 
-				<b>Gestione del consenso</b>
+				<b>Gestione del consenso</b><br />
 				Al primo accesso al sito, l’utente può accettare o rifiutare l’uso dei cookie di profilazione tramite un banner. In qualsiasi momento, è possibile modificare o revocare il consenso cliccando sull’apposita area <b>“Impostazioni cookie”</b> presente nel sito. <br />
 
+				<p class="mt-3 mb-3">
 				<b>Come disabilitare i cookie dal browser</b> <br />
 				L’utente può gestire o disabilitare i cookie direttamente dalle impostazioni del proprio browser. <br />
-
+				</p>
 				<b>Ecco alcuni link utili:</b>
 
 				<ul class="mb-4">
