--- a/AreaPubblica/Views/Contatti/Index.cshtml
+++ b/AreaPubblica/Views/Contatti/Index.cshtml
@@ -16,7 +16,7 @@
 			<div class="col-md-8">
 				<div class="d-flex flex-column align-items-start">
 					<div class="w-100">
-						<h1 class=" mb-4">Contatti</h1>
+						<h1 class="mt-3 mb-4">Contatti</h1>
 
 						<h4 class=" fw-normal mt-4">Centralino</h4>
 						<h5 class="fw-light">
