--- a/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
+++ b/AreaDocente/Views/Docenti/ModificaProfilo.cshtml
@@ -37,7 +37,7 @@
 			</div>
 		</div>
 	</div> *@
-<div class="container my-4">
+<div class="container mt-2">
 	<form class="row" method="post" id="modifica-form" enctype="multipart/form-data">
 		<div style="height: 4vh;">
 			&nbsp;
