--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -140,7 +140,7 @@
 						{
 							<div class="text-center">
 								<button type="button" class="btn btn-primary" disabled>Procedi</button>
-								<div class="text-center">
+								@* <div class="text-center">
 									<div class="text-danger mt-2">
 										@if (Model.Matricola.HasValue)
 										{
@@ -155,7 +155,7 @@
 											<span>Compila correttamente tutti i campi richiesti.</span>
 										}
 									</div>
-								</div>
+								</div> *@
 							</div>
 
 						}
