--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -96,9 +96,13 @@
             <!-- Main content -->
             <main class="main-content">
                 <div class="d-flex align-items-center justify-content-end">
-                    <a class="btn btn-light disabled me-1"><i class="bi bi-person-circle"></i></a>
-                    <asp:Label ID="lblNomeUtente" runat="server" CssClass="fw-bold"></asp:Label>
-                    <a href="https://localhost:7272/" class="btn btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                    <div class="d-flex align-items-center rounded" style="background-color: #12304F;">
+                        <a class="btn btn-sm text-white me-1" style="pointer-events: none; cursor: default;"><i class="bi bi-person-circle"></i></a>
+                        <asp:Label ID="lblNomeUtente" runat="server" CssClass="fw-bold text-white me-2"></asp:Label>
+                    </div>
+                    <div>
+                        <a href="https://localhost:7272/" class="btn btn-sm btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                    </div>
                 </div>
 
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
